--- a/assets/components/footer.html
+++ b/assets/components/footer.html
@@ -15,11 +15,11 @@
         </div>
         <div class="col-lg-4 col-12 contact3 wow fadeInUp">
           <div class="contac-img">
-            <img src="assets/images/group-footer.png" alt="Larrarte" class="logo img-fluid">
+            <img src="assets/images/logo-blanco.png" alt="Larrarte" class="logo img-fluid">
           </div>
           <div class="contac-red">
-            <a href="#" target="_blank" onclick='return false' ><img src="assets/images/facebook.svg" alt="Facebook" class="ifooter3"></a>
-            <a href="#" target="_blank" onclick='return false'><img src="assets/images/instagram.svg" alt="Instagram" class="ifooter3"></a>
+            <a href="https://www.facebook.com/grupolarrarte/" target="_blank" onclick='return true' ><img src="assets/images/facebook.svg" alt="Facebook" class="ifooter3"></a>
+            <a href="https://www.instagram.com/grupolarrarte/" target="_blank" onclick='return true'><img src="assets/images/instagram.svg" alt="Instagram" class="ifooter3"></a>
           </div>
         </div>
       </div>
