--- a/assets/components/header.html
+++ b/assets/components/header.html
@@ -13,11 +13,12 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <div class="grid-menu">
                   <div class="imenu"><span class="dropdown-item">
+                    <a href="pga.html">
                     <div class="mimg">
-                      <img src="assets/images/menu1.png" alt="Larrarte">
+                      <img src="assets/images/menu1.jpg" alt="Larrarte">
                     </div>
                     <div class="mtext">
-                      <a href="pga.html">
+                    <!--   <a href="pga.html"> -->
                         <p style="font-weight: 400">PGA</p>
                         <p class="d-lg-block d-none" style="font-weight: 700">Rentabilidad<br>asegurada</p>
                         <p class="d-lg-block d-none" style="font-weight: 400">hasta 10% anual</p>
@@ -27,10 +28,11 @@
                   </span></div>
                   <div class="imenu"><span class="dropdown-item">
                     <div class="mimg">
-                      <img src="assets/images/menu3.png" alt="Larrarte">
+                      <a href="negocios.html">
+                      <img src="assets/images/home-forestales.jpg" alt="Larrarte">
                     </div>
                     <div class="mtext">
-                      <a href="negocios.html">
+                      <!-- <a href="negocios.html"> -->
                         <p style="font-weight: 400">Forestales</p>
                         <p class="d-lg-block d-none" style="font-weight: 700">Rentabilidad</p>
                         <p class="d-lg-block d-none" style="font-weight: 400">de 7% a 12%<br>anual</p>
@@ -40,10 +42,11 @@
                   </span></div>
                   <div class="imenu"><span class="dropdown-item">
                     <div class="mimg">
-                      <img src="assets/images/menu2.png" alt="Larrarte">
+                      <a href="administracion.html">
+                      <img src="assets/images/menu2.jpg" alt="Larrarte">
                     </div>
                     <div class="mtext">
-                      <a href="administracion.html">
+                      <!-- <a href="administracion.html"> -->
                         <p style="font-weight: 700">Negocios Ganaderos<p>
                         <p class="d-lg-block d-none" style="font-weight: 400">Administración, <br>Remates, Inmobiliaria</p>
                           <span style="color: #DEB83D">Conocé más</span>
@@ -52,10 +55,11 @@
                   </span></div>
                   <div class="imenu"><span class="dropdown-item">
                     <div class="mimg">
-                      <img src="assets/images/menu4.png" alt="Larrarte">
+                      <a href="administracion.html">
+                      <img src="assets/images/home-construccion.jpg" alt="Larrarte">
                     </div>
                     <div class="mtext">
-                      <a href="administracion.html">
+                      <!-- <a href="administracion.html"> -->
                         <p style="font-weight: 700">Negocios Inmobiliarios
                         <p class="d-lg-block d-none" style="font-weight: 400">hasta 9% anual<br>larrarteurbano.com.uy</p>
                         <span style="color: #DEB83D">Conocé más</span>
@@ -80,6 +84,7 @@
     </div>
   </div>
 </div>
+<div class="line"></div>
 <div class="container" id="whatsappBtn">
   <div class="row">
     <div class="col-12">
