--- a/assets/styles/scss/components/_master.scss
+++ b/assets/styles/scss/components/_master.scss
@@ -63,6 +63,7 @@ section#group{
   h5{
     font-family: Roboto;
     font-weight: 400;
+    font-size: 1.125rem;
   }
 }
 //-------------SECTION INVESTMENT---------------------//
