--- a/assets/styles/scss/site/_bussiness.scss
+++ b/assets/styles/scss/site/_bussiness.scss
@@ -1,6 +1,6 @@
 //----------------------------nimage-banner---------------------------------//
 section#nimage-banner{
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1)),  url(../../images/negocios.png);
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1)),  url(../../images/header-forestales.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
