--- a/assets/styles/scss/site/_administration.scss
+++ b/assets/styles/scss/site/_administration.scss
@@ -1,6 +1,6 @@
 //----------------------------IMAGE-ABANNER---------------------------------//
 section#image-abanner{
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1)),  url(../../images/menu2.jpg);
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1)),  url(../../images/header-negocios-ganaderos.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
