--- a/assets/components/header.html
+++ b/assets/components/header.html
@@ -55,7 +55,7 @@
                   </span></div>
                   <div class="imenu"><span class="dropdown-item">
                     <div class="mimg">
-                      <a href="administracion.html">
+                      <a href="#" onclick="return false">
                       <img src="assets/images/home-construccion.jpg" alt="Larrarte">
                     </div>
                     <div class="mtext">
@@ -73,7 +73,7 @@
               <a class="nav-link" href="nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Soy inversor</a>
+              <a class="nav-link" href="#" onclick="return false">Soy inversor</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contacto</a>
